2014-03-13  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/menu.php
	  godmode/groups/configure_modu_group.php
	  godmode/groups/modu_group_list.php: Moved 'Module groups'
	to 'Manage modules'.

2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/configurar_agente.php: fixed for opensource
	version the prediction modules.

2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_plugin.php,
	include/javascript/pandora_modules.js: fixed the automagic deletion
	of macros when load a component.
	
	Incident: #654

2014-03-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Change the unknown mode
	to dont set data to 0 when is unknown and to not ignore
	unknown periods when are too short. Fixed events, alerts
	and unknown graphs in boolean graphs too.

	* include/functions_events.php: Delete useless link
	to deprecated url in events details (module link)

2014-03-11  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php: fixed the PHP warning in the function
	"html_get_predefined_table".
	
	Incident: #492

2014-03-11  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/pandora_modules.js: fixed the javascript to
	load the WMI query in the form to edit the module.
	
	Incident: #598

2014-03-11  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_monitores.php: fixed the length of module
	name in the agent view.
	
	Incident: #608

2014-03-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_visual_map.php: fixed images of static graphs.
	
	Incident: #571

2014-03-10  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components_form.php: fixed the
	fields for wmi that was disabled.
	
	Incident: #637
	
	* godmode/modules/manage_network_components_form_common.php,
	godmode/modules/manage_network_components_form_wmi.php: 

2014-03-10  Miguel de Dios <miguel.dedios@artica.es>
	