@@ -793,7 +793,7 @@ function users_check_users() {
 // Check if a user can manage a group when group is all
 // This function dont check acls of the group, only if the 
 // user is admin or pandora manager and the group is all
-function users_can_manage_group_all($id_group = 0) {
+function users_can_manage_group_all($id_group = 0, $access = "PM") {
 	global $config;
 	
 	if ($id_group != 0) {
@@ -802,7 +802,7 @@ function users_can_manage_group_all($id_group = 0) {
 	
 	$is_admin = db_get_value('is_admin', 'tusuario', 'id_user', $config['id_user']);
 	
-	if (check_acl ($config['id_user'], 0, "PM") || $is_admin) {
+	if (check_acl ($config['id_user'], 0, $access) || $is_admin) {
 		return true;
 	}
 	
