@@ -1,3 +1,12 @@
+2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/reporting/reporting_builder.main.php,
+	godmode/reporting/reporting_builder.php,
+	include/functions_users.php: fixed the access to the report with the
+	user profile "RW" and "RM".
+	
+	Incident: #655
+
 2014-03-13  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* godmode/menu.php
